--- a/frontend/src/stylesheets/App.scss
+++ b/frontend/src/stylesheets/App.scss
@@ -1,2 +1,131 @@
 @use "reset";
 @use "variables" as v;
+
+// Code Sass pour le Header
+.header {
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .tandem {
+      text-align: center;
+      margin: auto;
+    }
+    p {
+        cursor: pointer;
+      padding: 5px;
+      margin-right: 5px;
+    }
+  }
+  
+  // Code Sass pour le hero et les stats 
+  .hero {
+    width: 100%;
+
+    //position: relative;
+  
+    .hero-image {
+      width: 100%;
+      height: 30%; // pour conserver le ratio
+    }
+  
+    .hero-content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      color: white; // ou toute autre couleur selon votre design
+  
+      .hero-slogan {
+        font-size: 2em; // ajustez selon la taille souhaitée
+        margin-bottom: 20px;
+      }
+  
+      .hero-stats {
+        display: flex;
+        justify-content: center;
+  
+        .hero-stat {
+          margin: 0 15px;
+  
+          h3 {
+            font-size: 1.5em;
+          }
+  
+          p {
+            font-size: 1.2em;
+          }
+        }
+      }
+    }
+  }
+  
+// Code pour la NAVBAR Menu Burger 
+* {
+    padding: 0;
+    margin: 0;
+}
+li {
+    list-style: none;
+}
+p,
+p:visited {
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+p:hover {
+    color: white;
+}
+
+
+nav {
+    background-color: #f47142;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    font-size: calc(0.5rem + 1.5vw);
+}
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+}
+#icons {
+    cursor: pointer;
+    display: none;
+}
+
+@media (max-width: 650px) {
+    #icons {
+        display: block;
+    }
+    #icons:before {
+        content: "\2630";
+    }
+    .active #icons:before{
+        content: "\2715";
+    }
+    nav ul {
+        position: fixed;
+        left: -100%;
+        top: 5%;
+        flex-direction: column;
+        background-color: #f47142;
+        width: 100%;
+        text-align: center;
+        transition: 0.25s;
+    }
+    nav li {
+        padding: 3px 0;
+    }
+    nav li:hover {
+        background: #ff914a;
+    }
+    nav.active ul {
+        left: 0;
+     }
+}
+
