🗃️ 🐛 🎨 BACK / FRONT - Removed "creator" column in project table + added default image to project on creation

--- a/frontend/src/stylesheets/App.scss
+++ b/frontend/src/stylesheets/App.scss
@@ -98,6 +98,10 @@ header ul {
     display: none;
 }
 
+.project img{
+  width: 20%;
+}
+
 @media (max-width: 650px) {
     #icons {
         display: block;
