--- a/frontend/src/stylesheets/App.scss
+++ b/frontend/src/stylesheets/App.scss
@@ -1,8 +1,22 @@
 @use "reset";
 @use "variables" as v;
 
+.App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+main{
+  margin-bottom: auto;
+}
+
 // Code Sass pour le Header
 header {
+    position: sticky;
+    top: 0;
+    z-index: 50;
     color: white;
     display: flex;
     justify-content: space-between;
