--- a/frontend/src/stylesheets/App.scss
+++ b/frontend/src/stylesheets/App.scss
@@ -1,6 +1,10 @@
 @use "reset";
 @use "variables" as v;
 
+html{
+  min-height: 100vh;
+}
+
 .App {
   min-height: 100vh;
   display: flex;
@@ -9,7 +13,9 @@
 }
 
 main{
-  margin-bottom: auto;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 // Code Sass pour le Header
