--- a/frontend/src/stylesheets/Carousel.scss
+++ b/frontend/src/stylesheets/Carousel.scss
@@ -3,5 +3,13 @@
 .caroussel{
     background-color: v.$color-gpastel;
     padding: 2rem;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.656);
+    
+    
+    #carousel-img{
+        width: 100%;
+        height: 100%;
+    }
+    #carousel-description {
+        background-color: white;
+    }
 }
