--- a/frontend/src/stylesheets/Home.scss
+++ b/frontend/src/stylesheets/Home.scss
@@ -126,16 +126,34 @@ div #home-top{
     color: white;
   }
 }
+.title-project{
+  text-shadow: 5px 1px 0 v.$color-green;
+  -webkit-text-stroke: 1px;
+  -webkit-text-stroke-color: v.$color-green;
+  color: rgb(255, 255, 255);
+}
+.title-coeur{
+  text-shadow: 0 3px 0 v.$color-orange;
+  color: white;
+}
 .project{
   display: flex;
   flex-direction: column;
-  padding: 2rem;
-  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.656);
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  box-shadow: 5px 10px 15px 5px rgba(0, 0, 0, 0.656);
+  .project-image {
+    width: 100%;
+  }
+  .project-description{
+    margin-bottom: 2rem;
+  }
 }
 .carousel{
   background-color: v.$color-gpastel;
   margin-bottom: 1rem;
   margin-top: 1rem;
+  padding: 1rem;
 }
 
 
