Front-Menu-Burger-M

--- a/frontend/src/stylesheets/_variables.scss
+++ b/frontend/src/stylesheets/_variables.scss
@@ -1,8 +1,19 @@
 //colors
+$primary-color: rgba(244, 113, 67, 1);
 $color-orange : #f47142;
 $orange-light : #FFA082;
 $color-green : #78dd79;
 $color-gpastel : #adddb2;
+
+//text color
+$text-color: white;
+
+// Transition
+$transition-duration: 0.5s;
+$transition-ease: ease-in-out;
+
+// Hover
+$hover-color: #feb38c;
 
 //breakpoints
 $xs-breakpoint: 575px;
@@ -10,3 +21,4 @@ $sm-breakpoint: 767px;
 $md-breakpoint: 991px;
 $lg-breakpoint: 1199px;
 $xl-breakpoint: 1399px;
+
