💄 🎨 FRONT- updated Homepage CSS + added site Stats

--- a/frontend/src/stylesheets/MenuBurger.scss
+++ b/frontend/src/stylesheets/MenuBurger.scss
@@ -50,7 +50,7 @@ footer {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  position: fixed;
+  // position: fixed;
   width: 100%;
   min-height: 75px;
   padding: 1rem;
