--- a/frontend/src/stylesheets/Project.scss
+++ b/frontend/src/stylesheets/Project.scss
@@ -1,5 +1,5 @@
-div .project{
-    #project-image{
-        width: 50%;
-    }
-}
+// div .project{
+//     #project-image{
+//         width: 50%;
+//     }
+// }
