--- a/frontend/src/stylesheets/App.scss
+++ b/frontend/src/stylesheets/App.scss
@@ -18,4 +18,10 @@ main{
   flex-direction: column;
 }
 
+.title{
+  font-family: 'Ananda', sans-serif;
+  font-size: 5rem;
+  font-weight: 100;
+}
+
 
