💄 🎨 FRONT- added subtitle font

--- a/frontend/src/stylesheets/App.scss
+++ b/frontend/src/stylesheets/App.scss
@@ -24,4 +24,16 @@ main{
   font-weight: 100;
 }
 
+.subtitle{
+  font-family: 'Hittedal Sans', sans-serif;                                      
+}
+
+.title-green{
+  color: v.$color-green-dark;
+}
+
+.title-orange{
+  color: v.$primary-color;
+}
+
 
