--- a/frontend/src/stylesheets/_variables.scss
+++ b/frontend/src/stylesheets/_variables.scss
@@ -2,6 +2,7 @@
 $primary-color: rgba(244, 113, 67, 1);
 $color-orange : #f47142;
 $orange-light : #FFA082;
+$color-green-dark : #2EC458;
 $color-green : #78dd79;
 $color-gpastel : #adddb2;
 
