--- a/frontend/src/stylesheets/UserDetail.scss
+++ b/frontend/src/stylesheets/UserDetail.scss
@@ -1,14 +1,20 @@
 @use "variables" as v;
 
-#user-avatar {
+#user{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 
+#user-avatar {
+    padding: 2rem;
+    border: 2px solid v.$primary-color;
+    background-color: v.$color-gpastel;
+    border-radius: 100%;
+    width: 20rem;
+    display: flex;
     img {
-        border: 1px solid;
-        border-radius: 100%;
-        width: 10rem;
-        display: flex;
+      width: 100%;
     }
 }
 
