--- a/frontend/src/stylesheets/Project.scss
+++ b/frontend/src/stylesheets/Project.scss
@@ -1,5 +1,20 @@
-// div .project{
-//     #project-image{
-//         width: 50%;
-//     }
-// }
+@use "reset";
+@use "variables" as v;
+
+.progress{
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    .green{
+        .ant-progress-text{
+            color: v.$color-green-dark;
+            font-size: 2rem;
+        }
+    }
+    .orange{
+        .ant-progress-text{
+            color: v.$primary-color;
+            font-size: 2rem;
+        }
+    }
+}
