--- a/frontend/src/stylesheets/Carousel.scss
+++ b/frontend/src/stylesheets/Carousel.scss
@@ -3,13 +3,54 @@
 .caroussel{
     background-color: v.$color-gpastel;
     padding: 2rem;
+    .contenair-carousel{
+        border-radius: 25px;
+        background-color: white;
+        overflow: hidden;
+        .titleCreator-carousel{
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 0.5rem;
+            padding: 0.5rem;
+            align-items: center;
+        }
+        .creator-carousel{
+            text-decoration: underline;
+        }
+        .project-body-carousel{
+            padding: 1rem;
+        }
+    }
     
-    
-    #carousel-img{
-        width: 100%;
-        height: 100%;
+    .project-carousel{
+        #project-img{
+            width: 100%;
+        }
     }
     #carousel-description {
         background-color: white;
     }
+    
 }
+
+.slick-dots {
+    li {
+      button {
+        width: 15px;
+      }
+
+      &.slick-active {
+        height: 2px;
+        width: 2px;
+
+        
+        button {
+          height: 20px;
+          width: 20px;
+          border: solid;
+          border-radius: 45px;
+          color: v.$color-orange;
+        }
+      }
+    }
+  }
