--- a/frontend/src/stylesheets/Home.scss
+++ b/frontend/src/stylesheets/Home.scss
@@ -32,12 +32,7 @@
           width: 100%;
         }
       }
-      // position: absolute;
-      // top: 50%;
-      // left: 50%;
-      // transform: translate(-50%, -50%);
       text-align: center;
-      // color: rgba(255, 255, 255, 0.614);
       color: white;
       #home-ProjectsClose {
         color: v.$color-orange;
@@ -78,6 +73,12 @@ div #home-top{
     width: fit-content;
     color: white;
   }
+}
+.project{
+  img{
+  width: 100%;
+  height: 100%;
+}
 }
 .title-project{
   text-shadow: 5px 1px 0 v.$color-green;
@@ -127,7 +128,7 @@ div #home-top{
       font-size: 1.2em;
     }
   }
-
+  
   .projectsList{
     display: grid;
     padding: 2rem;
