--- a/frontend/src/stylesheets/ProjectDetail.scss
+++ b/frontend/src/stylesheets/ProjectDetail.scss
@@ -73,7 +73,7 @@
 
     @media (min-width: v.$xl-breakpoint) {
         width: 90%;
-        height: 80vh;
+        height: 70vh;
 
     }
 
@@ -383,21 +383,6 @@
     }
 
     .stepOne {
-        background-color: #77DD79;
-        width: 50vw;
-
-        @media (min-width: v.$sm-breakpoint) {
-            width: 80vw;
-            height: 4vh;
-        }
-
-        @media (min-width: v.$xl-breakpoint) {
-            width: 12vw;
-            height: 6vh;
-        }
-    }
-
-    .stepTwo {
         background-color: #77dd79a9;
         width: 50vw;
 
@@ -412,8 +397,23 @@
         }
     }
 
+    .stepTwo {
+        background-color: #77DD79;
+        width: 50vw;
+
+        @media (min-width: v.$sm-breakpoint) {
+            width: 80vw;
+            height: 4vh;
+        }
+
+        @media (min-width: v.$xl-breakpoint) {
+            width: 12vw;
+            height: 6vh;
+        }
+    }
+
     .stepThree {
-        background-color: #f4724391;
+        background-color: #f47243b4;
         width: 50vw;
 
         @media (min-width: v.$sm-breakpoint) {
@@ -518,6 +518,10 @@
     h5 {
         width: 50%;
         margin-bottom: 1rem;
+    }
+
+    img {
+        height: 6rem;
     }
 
 
