--- a/frontend/src/stylesheets/Form.scss
+++ b/frontend/src/stylesheets/Form.scss
@@ -11,7 +11,7 @@
     align-items: center;
 }
 
-form{
+.notFound, form{
     background-color: rgba(255, 255, 255, 0.3);
     margin: auto;
     padding: 3rem;
@@ -29,7 +29,10 @@ form{
     input, textarea{
         padding: 0.5rem;
     }
+}
 
+.notFound{
+    width: fit-content;
 }
 
 .alert{
