--- a/frontend/src/stylesheets/Home.scss
+++ b/frontend/src/stylesheets/Home.scss
@@ -105,9 +105,12 @@ div #home-top{
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.396);
   position: relative;
   border-radius: 1rem;
-  transition: all 200ms;
+  transition: all 500ms;
   &:hover{
     box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.575);
+  }
+  &:hover .project-img img{
+    transform: scale(1.05);
   }
   .container{
     flex: 1;
@@ -122,12 +125,17 @@ div #home-top{
     align-items: center;
     padding: 0.5rem;
     border-radius: 100%;
+    z-index: 1;
     top: 2rem;
     left: 2rem;
     box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.396);
     transition: all 200ms;
     &:hover{
+      cursor: pointer;
       transform: scale(1.1);
+    }
+    &:active{
+      transform: scale(1);
     }
   }
   .nut{
@@ -148,8 +156,10 @@ div #home-top{
     .project-title:hover{
       cursor: pointer;
     }
-    .creator{
+    .project-creator{
       width: 100%;     
+      display: flex;
+      justify-content: flex-end;
       p{
         width: fit-content;
         text-decoration: underline;
@@ -173,6 +183,7 @@ div #home-top{
     overflow: hidden;
     height: 40%;
     img{
+      transition: all 500ms;
       flex-shrink: 0;
       min-width: 100%;
       min-height: 100%;
