--- a/frontend/src/stylesheets/Language.scss
+++ b/frontend/src/stylesheets/Language.scss
@@ -1,11 +1,15 @@
 @use "reset";
 @use "variables" as v;
 
-.languagesList{
+.ant-modal-content{
+    width: 100%;
+}
+
+.languagesList-1{
     display: grid;
     grid-template-columns: min-content repeat(4, 1fr);
     gap: 2rem;
-    width: fit-content;
+    width: 100%;
 }
 
 .languagesList-2{
@@ -23,7 +27,7 @@
 .language{
     flex: 1;
     display: flex;
-    width: fit;
+    width: fit-content;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -89,7 +93,7 @@
     .languagesList-2{
         grid-template-columns: repeat(8, 1fr);
     }
-    .languagesList{
+    .languagesList-1{
         grid-template-columns: repeat(8, 1fr);
     }
 
