🎨  💄  FRONT - added home xl responsive on projects list

--- a/frontend/src/stylesheets/Home.scss
+++ b/frontend/src/stylesheets/Home.scss
@@ -297,5 +297,12 @@
   }
 }
 
-
+@media (min-width: v.$xl-breakpoint){
+  .projectsList{
+    grid-template-columns:  repeat(5, 1fr);
+    .languagesList-3{
+      grid-template-columns:  repeat(5, 1fr);
+    }
+  }
+}
 
