--- a/frontend/src/stylesheets/Home.scss
+++ b/frontend/src/stylesheets/Home.scss
@@ -129,9 +129,9 @@
   &:hover{
     box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.575);
   }
-  &:hover .project-img img{
-    transform: scale(1.05);
-  }
+  // &:hover .project-img img{
+  //   transform: scale(1.05);
+  // }
   .container{
     flex: 1;
     border-radius: 1rem;
@@ -166,6 +166,16 @@
   }
   .tree{
     background-color:  v.$primary-color;
+  }
+  .user-actions{
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    opacity: 0;
+    transition: all ease-in-out 300ms;
+  }
+  &:hover .user-actions{
+    opacity: 1;
   }
   .project-body{
     padding: 1rem;
