--- a/frontend/src/stylesheets/Home.scss
+++ b/frontend/src/stylesheets/Home.scss
@@ -169,14 +169,36 @@
   }
   .user-actions{
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
     right: 2rem;
     top: 2rem;
     opacity: 0;
     transition: all ease-in-out 300ms;
+    .action-icon{
+      filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.396));
+      transition: all 200ms;
+      &:hover{
+        cursor: pointer;
+        transform: scale(1.1);
+      }
+      &:active{
+        transform: scale(1);
+      }
+    }
+    .favorites {
+      color: #FFC702;
+    }
+    .likes {
+      color: #FF0000;
+    }
   }
   &:hover .user-actions{
     opacity: 1;
   }
+
+
   .project-body{
     padding: 1rem;
     display: flex;
