--- a/frontend/src/stylesheets/Project.scss
+++ b/frontend/src/stylesheets/Project.scss
@@ -1,6 +1,110 @@
 @use "reset";
 @use "variables" as v;
 
+.project{
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.396);
+    position: relative;
+    border-radius: 1rem;
+    transition: all 500ms;
+    &:hover{
+      box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.575);
+    }
+    &:hover .project-img img{
+      transform: scale(1.05);
+    }
+    .container{
+      flex: 1;
+      border-radius: 1rem;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+    }
+    .icon{
+      position: absolute;
+      display: flex;
+      align-items: center;
+      padding: 0.5rem;
+      border-radius: 100%;
+      z-index: 1;
+      top: 2rem;
+      left: 2rem;
+      box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.396);
+      transition: all 200ms;
+      &:hover{
+        cursor: pointer;
+        transform: scale(1.1);
+      }
+      &:active{
+        transform: scale(1);
+      }
+    }
+    .nut{
+      background-color:  v.$color-green-dark;
+    }
+    .plant{
+      background-color:  v.$color-green;
+    }
+    .tree{
+      background-color:  v.$primary-color;
+    }
+    .project-body{
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      flex: 1;
+      .project-title:hover{
+        cursor: pointer;
+      }
+      .project-creator{
+        width: 100%;     
+        display: flex;
+        justify-content: flex-end;
+        p{
+          width: fit-content;
+          text-decoration: underline;
+          color: #8C8C8C;
+          transition: all 200ms;
+          &:hover{
+            cursor: pointer;
+            color: v.$color-green-dark;
+            text-decoration-color: v.$color-green-dark;
+          }
+        }
+      }
+      .description{
+        margin-top: 1rem;
+      }
+    }
+    .project-img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      height: 40%;
+      img{
+        transition: all 500ms;
+        flex-shrink: 0;
+        min-width: 100%;
+        min-height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+      &:hover{
+        cursor: pointer;
+      }
+    }
+  
+    .bottom-row{
+      display: flex;
+      align-items: flex-end;
+      gap: 1rem;
+    }
+  }
+
+
 .progress{
     display: flex;
     align-items: center;
@@ -19,3 +123,18 @@
     }
 }
 
+@media (min-width: v.$sm-breakpoint){
+    .project{
+        width: 100%;
+        .img{
+          width: 100%;
+          img{
+            width: 100%;
+          }
+        }
+      }
+      .icon{
+        top: -1.5rem;
+        left: -1.5rem;
+      }
+}
