--- a/frontend/src/stylesheets/UserDetail.scss
+++ b/frontend/src/stylesheets/UserDetail.scss
@@ -45,32 +45,32 @@
     flex-wrap: wrap;
 }
 
-#user-project {
-    #user-div {
-            border: none;
-            flex-direction: row;
-            justify-content: center;
-        h1 {
-            text-align: center;
-        }
+// #user-project {
+//     #user-div {
+//             border: none;
+//             flex-direction: row;
+//             justify-content: center;
+//         h1 {
+//             text-align: center;
+//         }
 
-        button {
-            background-color: v.$color-green  ;
-            border-radius: 1rem;
-            height: 1.5rem;
-            width: 1.5rem;
-            border: none;
-        }
-    }
+//         button {
+//             background-color: v.$color-green  ;
+//             border-radius: 1rem;
+//             height: 1.5rem;
+//             width: 1.5rem;
+//             border: none;
+//         }
+//     }
 
-    div {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        align-items: center;
-        border: 2px solid black;
-        padding: 1rem;
-        margin-bottom: 1rem;
+//     div {
+//         display: flex;
+//         flex-direction: column;
+//         text-align: center;
+//         align-items: center;
+//         border: 2px solid black;
+//         padding: 1rem;
+//         margin-bottom: 1rem;
         
-    }
-}
+//     }
+// }
