--- a/frontend/src/stylesheets/MenuBurger.scss
+++ b/frontend/src/stylesheets/MenuBurger.scss
@@ -194,6 +194,9 @@ ul {
     .slideInDown-4 {
       transition: all 1.1s v.$transition-ease;
     }
+    .slideInDown-5 {
+      transition: all 1.2s v.$transition-ease;
+    }
   }
 
   /* button animation */
