--- a/frontend/src/stylesheets/Home.scss
+++ b/frontend/src/stylesheets/Home.scss
@@ -30,6 +30,8 @@
     align-items: center;
     color: rgb(255, 255, 255);
     gap: 2rem;
+    text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.7);
+    
     #slogan{
       width: 50rem;
       img{
@@ -41,19 +43,29 @@
 
     .hero-stat{
       p{
+       
         font-size: 4rem;
         font-weight: bold;
         text-shadow: 2px 2px 0px white;
       }
     }
     #home-ProjectsClose {
-      color: v.$color-orange;
+      text-shadow: 0px 0px v.$color-orange, 
+        1px 1px v.$color-orange, 
+        2px 2px v.$color-orange, 
+        3px 3px v.$color-orange;
     }
     #home-ProjetsEnCours{
-      color: v.$color-gpastel;
+      text-shadow: 0px 0px v.$color-green, 
+        1px 1px v.$color-green, 
+        2px 2px v.$color-green, 
+        3px 3px v.$color-green;
     }
     #home-NumberSub{
-      color: v.$color-green;
+      text-shadow: 0px 0px v.$color-green-dark, 
+        1px 1px v.$color-green-dark, 
+        2px 2px v.$color-green-dark, 
+        3px 3px v.$color-green-dark;
     }
 
   }
@@ -289,6 +301,7 @@
   }
 
   .hero-stats {
+    gap: 4rem;
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
@@ -327,6 +340,9 @@
 
 
 @media (min-width: v.$lg-breakpoint){
+  .hero-stats {
+    gap: 10rem;
+  }
   .projectsList{
     grid-template-columns:  repeat(4, 1fr);
     .languagesList-3{
