--- a/frontend/src/stylesheets/App.scss
+++ b/frontend/src/stylesheets/App.scss
@@ -24,6 +24,10 @@ main{
   font-weight: 100;
 }
 
+h1{
+  text-align: center;
+}
+
 .subtitle{
   font-family: 'Hittedal Sans', sans-serif;                                      
 }
