--- a/frontend/src/stylesheets/Carousel.scss
+++ b/frontend/src/stylesheets/Carousel.scss
@@ -3,11 +3,12 @@
 .caroussel {
   background-color: v.$color-gpastel;
   padding: 2rem;
-
+  margin-bottom: 1rem;
   .contenair-carousel {
     border-radius: 25px;
     background-color: white;
     overflow: hidden;
+    margin-bottom: 1rem;
 
     .titleCreator-carousel {
       display: flex;
@@ -36,31 +37,51 @@
     background-color: white;
   }
 
+
 }
 
 .slick-dots {
+  gap: 3rem;
   li {
-    button {
-      width: 15px;
+    display: flex;
+    justify-content: center;
+    width: fit-content !important;
+    button{
+      opacity: 1 !important;
+    }
+    button::after {
+      height: 20px;
+      width: 20px;
+      border-radius: 100%;
+      background-color: v.$color-green;
+      box-shadow: 0px 2px v.$color-green-dark;
+    }
+    
+    &.slick-active button::after {
+      background-color: v.$primary-color ;
+      box-shadow: inset 0px 3px rgba(0, 0, 0, 0.5),
+      0px 2px v.$primary-color;
+    }
+    
+    // button:hover::after{
+    //   background-color: v.$color-green ;
+    //   box-shadow: 0px 2px v.$color-green,
+    //   inset 0px 3px v.$color-gpastel;
+    // }
+    button:active::after{
+      background-color: v.$color-green ;
+      box-shadow: inset 0px 3px v.$color-green-dark,
+      0px 2px v.$color-green;
     }
 
-    &.slick-active {
-      height: 2px;
-      width: 2px;
 
-
-      button {
-        height: 20px;
-        width: 20px;
-        border: solid;
-        border-radius: 45px;
-        color: v.$color-orange;
-      }
-    }
   }
 }
 
 @media (min-width: v.$sm-breakpoint) {
+  .caroussel{
+    margin-bottom: 0;
+  }
   .contenair-carousel {
     display: flex;
 
