--- a/frontend/src/stylesheets/_variables.scss
+++ b/frontend/src/stylesheets/_variables.scss
@@ -1,7 +1,7 @@
 //colors
-$primary-color: rgba(244, 113, 67, 1);
-$color-orange : #f47142;
-$orange-light : #FFA082;
+$primary-color: #F47143;
+$color-orange : #FFA082;
+$orange-light : #FFD7B4;
 $color-green-dark : #2EC458;
 $color-green : #78dd79;
 $color-gpastel : #adddb2;
