--- a/frontend/src/stylesheets/UserDetail.scss
+++ b/frontend/src/stylesheets/UserDetail.scss
@@ -10,29 +10,65 @@
     display: flex;
     justify-content: center ;
     margin: 2rem;
-    width: 80%;
+    width: 90%;
     position: relative;
+    .top-left-btn{
+        position: absolute;
+        top:0;
+        left: 0;
+        &:hover{
+            cursor: pointer;
+        }
+    }
     .top-right-btn{
         position: absolute;
         top: 0;
         right: 0;
     }
-    .bottom-left-btn{
-        position: absolute;
-        bottom: 0;
-        left: 0; 
-    }
 }
 
 #user-avatar {
     padding: 2rem;
-    border: 2px solid v.$color-green-dark;
-    background-color: v.$color-gpastel;
+    border: 4px solid v.$color-green;
+    box-shadow: 0 3px 0px 1px v.$color-green-dark;
     border-radius: 100%;
-    width: 20rem;
+    width: 15rem;
     display: flex;
     img {
       width: 100%;
+    }
+}
+
+
+
+.contacts{
+    position: absolute;
+    bottom: 0;
+    right: 0; 
+}
+
+.links{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    div{
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        transition: all 200ms;
+    }
+    p{
+        text-decoration: underline;
+    }
+    .discord-icon{
+        color:#7289da
+    }
+    div:hover, div:hover svg {
+        cursor: pointer;
+        color: v.$primary-color;
     }
 }
 
@@ -43,34 +79,13 @@
 #languages {
     display: flex;
     flex-wrap: wrap;
+    margin: auto;
+    width: fit-content;
+    .language{
+        width: 20%;
+    }
 }
 
-// #user-project {
-//     #user-div {
-//             border: none;
-//             flex-direction: row;
-//             justify-content: center;
-//         h1 {
-//             text-align: center;
-//         }
+@media (min-width: v.$sm-breakpoint){
 
-//         button {
-//             background-color: v.$color-green  ;
-//             border-radius: 1rem;
-//             height: 1.5rem;
-//             width: 1.5rem;
-//             border: none;
-//         }
-//     }
-
-//     div {
-//         display: flex;
-//         flex-direction: column;
-//         text-align: center;
-//         align-items: center;
-//         border: 2px solid black;
-//         padding: 1rem;
-//         margin-bottom: 1rem;
-        
-//     }
-// }
+}
