--- a/frontend/src/stylesheets/UserDetail.scss
+++ b/frontend/src/stylesheets/UserDetail.scss
@@ -27,16 +27,59 @@
     }
 }
 
-#user-avatar {
+.avatar {
     padding: 2rem;
     border: 4px solid v.$color-green;
     box-shadow: 0 3px 0px 1px v.$color-green-dark;
     border-radius: 100%;
     width: 15rem;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: all 200ms;
     img {
       width: 100%;
+      transition: all 200ms;
     }
+    .hidden{
+        opacity: 0;
+        transition: all 200ms;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: fit-content;
+        height: fit-content;
+        font-weight: bold;
+        color: white;
+    }
+    &.img-hover:hover{
+        cursor: pointer;
+        background-color: rgba(0, 0, 0, 0.3);
+        img{
+            opacity: 0.3;
+        }
+        .hidden{
+            opacity: 1;
+        }
+    }
+}
+
+.avatarsList{
+    display: grid;
+    grid-template-columns:  repeat(6, 1fr);
+    gap: 0.7rem 1rem;
+    .avatar{
+        width: 8rem;
+       padding: 1rem;
+    }             
+}
+
+.ant-modal-content{
+    width: fit-content;
 }
 
 
