--- a/frontend/src/stylesheets/UserDetail.scss
+++ b/frontend/src/stylesheets/UserDetail.scss
@@ -4,31 +4,44 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 2rem;
+    gap: 1rem;
 }
 
+.user-profile{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    position: relative;
+}
+
+.top-left-btn{
+    position: absolute;
+    top:0;
+    left: 0;
+    &:hover{
+        cursor: pointer;
+    }
+}
+.top-right-btn{
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 .profile{
     display: flex;
     justify-content: center ;
-    margin: 2rem;
-    width: 90%;
+    width: 100%;
     position: relative;
-    .top-left-btn{
-        position: absolute;
-        top:0;
-        left: 0;
-        &:hover{
-            cursor: pointer;
-        }
-    }
-    .top-right-btn{
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
 }
 
 .avatar {
     padding: 2rem;
+    background-color: white;
     border: 4px solid v.$color-green;
     box-shadow: 0 3px 0px 1px v.$color-green-dark;
     border-radius: 100%;
@@ -58,7 +71,7 @@
     }
     &.img-hover:hover{
         cursor: pointer;
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgb(198, 198, 198);
         img{
             opacity: 0.3;
         }
@@ -87,6 +100,10 @@
     }             
 }
 
+.date{
+    color: #8C8C8C;
+}
+
 .ant-modal{
 
     width: 100%;
@@ -97,7 +114,11 @@
     margin: auto;
 }
 
-
+.params{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
 .contacts{
     position: absolute;
@@ -117,9 +138,12 @@
         align-items: center;
         gap: 0.5rem;
         transition: all 200ms;
+        overflow: hidden;
     }
     p{
         text-decoration: underline;
+        max-width: 12rem;
+        text-overflow: ellipsis;
     }
     .discord-icon{
         color:#7289da
@@ -134,6 +158,14 @@
     text-align: center;
 }
 
+#user-languages, #user-created, #user-projects, .user-description{
+    width: 100%;
+}
+
+.user-description, #user-name, .user-profile{
+    margin-bottom: 2rem;
+}
+
 #languages {
     display: flex;
     flex-wrap: wrap;
@@ -144,6 +176,66 @@
     }
 }
 
-@media (min-width: v.$sm-breakpoint){
+.languagesList-profile{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    gap: 0.7rem 1rem;
+    width: fit-content;
+}
 
+@media (min-width: v.$sm-breakpoint){
+    #user{
+        padding: 2rem 6rem ;
+    }
+    #user-name h1, .date{
+        width: fit-content;
+    }
+   
+    .user-profile{
+        flex-direction: row;
+    }
+    .profile{
+        width: 20%;
+        flex-direction: column;
+        align-items: center;
+        margin: 0 3rem;
+        gap: 2rem;
+    }
+    .links, .contacts{
+        position: static;
+    }
+    .links{
+        flex-direction: row;
+        flex-wrap: wrap;
+        max-width: 100%;
+        .discord, .github{
+            width: fit-content;
+            display: flex;
+            max-width: 100%;
+            margin: auto;
+            white-space: nowrap;
+            svg{
+                min-width: 25px;
+            }
+            p{
+                min-width: fit-content;
+            }
+        }
+    }
+    .languagesList-profile{
+        grid-template-columns: repeat(10, 1fr);
+    }
+  
+}
+
+@media (min-width: v.$md-breakpoint) {
+    .profile{
+        margin: 0 5rem;
+    }
+    .top-right-btn{
+        flex-direction: row;
+    }
+    .languagesList-profile{
+        grid-template-columns: repeat(20, 1fr);
+    }
 }
