--- a/frontend/src/stylesheets/UserDetail.scss
+++ b/frontend/src/stylesheets/UserDetail.scss
@@ -162,6 +162,26 @@
     width: 100%;
 }
 
+.user-description p {
+    width: 100%;
+    overflow-wrap: break-word; 
+}
+
+#user-languages, #user-created, #user-projects{
+    h2{
+        padding-bottom: 0.5rem;
+        border-bottom: solid 2px v.$color-green-dark;
+    }
+}
+
+.blank{
+    margin: 2rem 0;
+}
+
+.description-profile{
+    flex: 1;
+}
+
 .user-description, #user-name, .user-profile{
     margin-bottom: 2rem;
 }
@@ -177,6 +197,7 @@
 }
 
 .languagesList-profile{
+    margin-top: 2rem;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     gap: 0.7rem 1rem;
@@ -198,6 +219,7 @@
         width: 20%;
         flex-direction: column;
         align-items: center;
+        justify-content: flex-start;
         margin: 0 3rem;
         gap: 2rem;
     }
