🎨 💄 FRONT - finished(ish) userPage style + updated footer + removed Logout Route (API call on logout button on UserPage)

--- a/frontend/src/stylesheets/App.scss
+++ b/frontend/src/stylesheets/App.scss
@@ -18,6 +18,10 @@ main{
   flex-direction: column;
 }
 
+footer{
+  color: white;
+}
+
 .title{
   font-family: 'Ananda', sans-serif;
   font-size: 5rem;
