--- a/frontend/src/stylesheets/Project.scss
+++ b/frontend/src/stylesheets/Project.scss
@@ -3,6 +3,7 @@
 
 .project{
     display: flex;
+    background-color: white;
     flex-direction: column;
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.396);
     position: relative;
