--- a/frontend/src/stylesheets/UserDetail.scss
+++ b/frontend/src/stylesheets/UserDetail.scss
@@ -4,16 +4,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem;
+    // padding: 2rem;
     gap: 1rem;
 }
 
 .user-profile{
-    width: 100%;
+    width: 95%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     position: relative;
+    margin: 2rem;
+}
+
+#user-created, #user-projects{
+    width: 100%;
+    padding: 2rem;
+}
+
+#user-created{
+    box-shadow: inset 0 5px 5px rgba(0, 0, 0, 0.3), inset 0 -5px 5px rgba(0, 0, 0, 0.3);
+    background-color: v.$color-gpastel;
+}
+
+#user-projects{
+    background-color: white;
 }
 
 .top-left-btn{
@@ -23,6 +38,7 @@
     &:hover{
         cursor: pointer;
     }
+    z-index: 1;
 }
 .top-right-btn{
     position: absolute;
@@ -31,6 +47,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    z-index: 1;
 }
 .profile{
     display: flex;
@@ -171,7 +188,13 @@
     h2{
         padding-bottom: 0.5rem;
         border-bottom: solid 2px v.$color-green-dark;
+        margin-bottom: 1rem;
+        margin-top: 2rem;
     }
+}
+
+.user-body{
+    width: 100%;
 }
 
 .blank{
@@ -205,22 +228,26 @@
 }
 
 @media (min-width: v.$sm-breakpoint){
-    #user{
-        padding: 2rem 6rem ;
-    }
+
     #user-name h1, .date{
         width: fit-content;
+        text-align: left;
     }
    
     .user-profile{
         flex-direction: row;
+        margin: 2rem 6rem;
+    }
+    #user-created, #user-projects{
+        padding: 2rem 6rem;
     }
     .profile{
         width: 20%;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
-        margin: 0 3rem;
+        margin-left: 3rem;
+        margin-right: 2rem;
         gap: 2rem;
     }
     .links, .contacts{
@@ -252,7 +279,7 @@
 
 @media (min-width: v.$md-breakpoint) {
     .profile{
-        margin: 0 5rem;
+        margin-left: 5rem;
     }
     .top-right-btn{
         flex-direction: row;
