--- a/frontend/src/stylesheets/UserDetail.scss
+++ b/frontend/src/stylesheets/UserDetail.scss
@@ -9,7 +9,7 @@
 }
 
 .user-profile{
-    width: 95%;
+    width: 92%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -139,8 +139,11 @@
 
 .contacts{
     position: absolute;
-    bottom: 0;
     right: 0; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .links{
@@ -232,6 +235,11 @@
     #user-name h1, .date{
         width: fit-content;
         text-align: left;
+    }
+    .contacts{
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 100%;
     }
    
     .user-profile{
